# tmin

./: .dockerignore  .gitignore  DOCKER_README.md  Dockerfile  Makefile  README.md  docker-compose.yml  docker-examples.sh  docker.sh  gh-auth.sh  official_design_doc.tex  pyproject.toml  requirements.txt  run_tests.py  test-docker.sh
.github/workflows/: tests.yml
Reports/: 20250721_190128_TMIN_report_TMIN_20250721_190128.txt  20250721_190128_TMIN_summary_20250721_190128.txt  20250721_192232_TMIN_report_TMIN_20250721_192232.txt  20250721_192232_TMIN_summary_20250721_192232.txt  20250722_064940_TMIN_report_TMIN_20250722_064940.txt  20250722_064940_TMIN_summary_20250722_064940.txt  20250722_065256_TMIN_report_TMIN_20250722_065256.txt  20250722_065256_TMIN_summary_20250722_065256.txt  20250722_203742_TMIN_report_TMIN_20250722_203742.txt  20250722_203742_TMIN_summary_20250722_203742.txt
scripts/: test_fresh_install.py  test_fresh_install.sh
templates/: engineering_memorandum.txt
tests/: conftest.py
tmin/: .gitignore  README.md  __init__.py  core.py  core_dev.py  core_exp.py  example_pipe_config.toml  report.py  report_generator.py  report_generator.sublime-workspace  requirements.txt  tmin_class.py
tmin.egg-info/: PKG-INFO  SOURCES.txt
tmin/Engineering Memorandum Template/: ENGINEERING MEMORANDUM.txt
tmin/Input/: memorandum_values_example.json
tmin/data/: memorandum_values_example.json
tmin/tables/: api_574_2024.py  api_574_2025.py  pmg_table.py
tmin/templates/: engineering_memorandum.txt
tutorials/: barebones.py  tmin_workflow.ipynb
(+13 files in other folders)
