[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tmin"
version = "1.0.1"
description = "A comprehensive pipe thickness analysis tool for mechanical integrity engineering"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Andrew Trepagnier", email = "andrew.trepagnier@icloud.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.23",
    "matplotlib>=3.5",
    "sympy>=1.11",
]

[project.urls]
Homepage = "https://github.com/AndrewTrepagnier/tmin"
Repository = "https://github.com/AndrewTrepagnier/tmin"
Issues = "https://github.com/AndrewTrepagnier/tmin/issues"

[tool.setuptools.packages.find]
include = ["tmin*"]